--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -117,7 +117,8 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/swagger-ui.html">Explore APIs</a></li>
+                <li><a href="/swagger-ui.html" target="_blank">EXPLORE APIs</a></li>
+                <li><a href="https://github.com/nitish-iiitd/RestWithSpringBoot" target="_blank">CONTRIBUTE</a></li>
             </ul>
         </div>
     </div>
@@ -134,15 +135,15 @@
     Hence, it would be useful if you have some idea of REST beforehand.
         <br><br>
         Please go through the below articles if you are a little bit rusty on REST theoretical concepts.<br>
-        <a href="https://restfulapi.net/" target="_blank">REST Basics</a><br>
-        <a href="https://restfulapi.net/rest-architectural-constraints/" target="_blank">REST Architectural Constraints</a>
+        <a href="https://restfulapi.net/" target="_blank">REST Basics  <span class="glyphicon glyphicon-new-window"></span></a><br>
+        <a href="https://restfulapi.net/rest-architectural-constraints/" target="_blank">REST Architectural Constraints  <span class="glyphicon glyphicon-new-window"></span></a>
         <br><br>
         </p>
 </div>
 
 <div class="container content-container-alert bg-white">
     <div class="alert alert-info" role="alert">
-        <p class="text-justify mid-notices"><strong>Hey!</strong> This article might not be perfect.
+        <p class="text-justify mid-notices"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;<strong>Hey!</strong> This article might not be perfect.
             If you have any suggestions or feedback, please write to me at nitish2794@gmail.com</p>
     </div>
 </div>
@@ -191,13 +192,13 @@
 <div class="container content-container bg-white ">
     <h3 class="margin">RMM Levels</h3>
     <p>To learn about the levels of RMM model, you can read the article :
-        <a href="https://restfulapi.net/richardson-maturity-model/" target="_blank">Richardson Maturity Model</a>.
+        <a href="https://restfulapi.net/richardson-maturity-model/" target="_blank">Richardson Maturity Model  <span class="glyphicon glyphicon-new-window"></span></a>.
     </p>
     <p>Below is the summarized version of the levels as defined by RMM.</p>
-    <p>Level 0 - Single URI over HTTP</p>
-    <p>Level 1 - Resource URIs</p>
-    <p>Level 2 - Resource URIs + HTTP verbs</p>
-    <p>Level 3 - Resource URIs + HTTP verbs + Hypermedia</p>
+    <p><span class="label label-info">Level 0</span> - Single URI over HTTP</p>
+    <p><span class="label label-info">Level 1</span> - Resource URIs</p>
+    <p><span class="label label-info">Level 2</span> - Resource URIs + HTTP verbs</p>
+    <p><span class="label label-info">Level 3</span> - Resource URIs + HTTP verbs + Hypermedia</p>
     <br>
     <p class="text-justify">Please note that level 3 (highest level) of RMM talks about the use of hypermedia
         however it actually is one of the core guidelines of REST i.e usage of hypermedia is a <b class="imp-term">pre-condition</b> to REST.</p>
@@ -229,7 +230,7 @@
 
     </p>
     <br>
-    <a class="btn btn-primary btn-lg justify-center" href="/swagger-ui.html" role="button">Explore Swagger API Documentation</a>
+    <a class="btn btn-primary btn-lg justify-center" href="/swagger-ui.html" role="button"><span class="glyphicon glyphicon-new-window"></span>  Explore Swagger API Documentation</a>
     <br><br>
     <p class="text-justify">
         Next, we would see how these APIs are becoming more and more RESTful as we gradually proceed to higher levels.
@@ -238,7 +239,7 @@
 
 <div class="container content-container-alert bg-white">
     <div class="alert alert-info" role="alert">
-        <p class="text-justify mid-notices">This example is inspired from the spring.io article : <a href="https://spring.io/guides/tutorials/rest/">Building REST services with Spring</a> </p>
+        <p class="text-justify mid-notices"><span class="glyphicon glyphicon-info-sign"></span>&nbsp;This example is inspired from the spring.io article : <a href="https://spring.io/guides/tutorials/rest/">Building REST services with Spring  <span class="glyphicon glyphicon-new-window"></span></a> </p>
     </div>
 </div>
 
@@ -252,11 +253,11 @@
         and we send the action and the required data in the payload of the HTTP request.
         <br><br>
         The available actions are : <br>
-        1. <i>create</i> for creating a employee<br>
-        2. <i>readAll</i> for retrieving all the employees<br>
-        3. <i>read</i> for retrieving one employee given the employee id in the payload<br>
-        4. <i>update</i> for updating an employee<br>
-        5. <i>delete</i> for deleting an employee<br>
+        1. <span class="label label-info">create</span> for creating a employee<br>
+        2. <span class="label label-info">readAll</span> for retrieving all the employees<br>
+        3. <span class="label label-info">read</span> for retrieving one employee given the employee id in the payload<br>
+        4. <span class="label label-info">update</span> for updating an employee<br>
+        5. <span class="label label-info">delete</span> for deleting an employee<br>
         <br>
         Checkout the Level 0 APIs in the swagger documentation for further API details.
     </p>
@@ -297,7 +298,7 @@
     <p class="text-justify">
         Level 3 states that the service should be following all the requirements of level 2 and in addition to that,
         it should provide hypermedia in the API response using which the client can navigate the service further.
-        This is termed as HATEOAS (read more <a href="https://restfulapi.net/hateoas/">here</a>) and is one of the core requirements for a RESTful service.
+        This is termed as HATEOAS (read more <a href="https://restfulapi.net/hateoas/" target="_blank">here <span class="glyphicon glyphicon-new-window"></span></a>) and is one of the core requirements for a RESTful service.
         <br><br>
         HATEOAS simply says that if you are providing some resource state to a client, then you need to also provide some
         additional links which should tell the client how to perform other valid actions related to that resource.
@@ -309,15 +310,19 @@
         For example, reading one employee would also provide us a link to read all the employees.
         <br><br>
         Now, coming to the second resource i.e Order. Order resource has a property called State.
-        Every order would be having any one state out of these three states : IN_PROGRESS, COMPLETED and CANCELLED.
-        <br>
-        -> The order with IN_PROGRESS state can either be cancelled or completed i.e can either go to CANCELLED or COMPLETED state.
-        <br>
-        -> The order with CANCELLED or COMPLETED state cannot go to any other state.
+        Every order would be having any one state out of these three states :
+        <span class="label label-warning">IN_PROGRESS</span>,
+        <span class="label label-success">COMPLETED</span>
+        and <span class="label label-danger">CANCELLED</span>.
         <br><br>
-        Check out the read API call response for an order with IN_PROGRESS state. We find that we get some links in the response.
+        <span class="glyphicon glyphicon-asterisk"></span> The order with <span class="label label-warning">IN_PROGRESS</span> state can either be cancelled or completed i.e can either go to <span class="label label-danger">CANCELLED</span> or <span class="label label-success">COMPLETED</span> state.
+        <br>
+        <br>
+        <span class="glyphicon glyphicon-asterisk"></span> The order with <span class="label label-danger">CANCELLED</span> or <span class="label label-success">COMPLETED</span> state cannot go to any other state.
+        <br><br>
+        Check out the read API call response for an order with <span class="label label-warning">IN_PROGRESS</span> state. We find that we get some links in the response.
         We would be getting 4 links in the response out of which two links give us the two valid action URIs which we can perform on this particular order.
-        However, if we try out the read API call for an order with CANCELLED or COMPLETED state, we won't get any links for cancel and complete action.
+        However, if we try out the read API call for an order with <span class="label label-danger">CANCELLED</span> or <span class="label label-success">COMPLETED</span> state, we won't get any links for cancel and complete action.
         This variation in response tells the client about the valid actions that can be performed on a particular order resource.
         <br><br>
         One important thing to note here is that due to the above feature, client does not need to store server-side logic of invalid or valid actions.
@@ -350,7 +355,7 @@
 
 <!-- Footer -->
 <footer class="container-fluid bg-darkgray text-center">
-    <p>Developed By <a href="https://www.linkedin.com/in/nitish-srivastava-353a61129/">Nitish Srivastava</a></p>
+    <p>Developed By <a href="https://www.linkedin.com/in/nitish-srivastava-353a61129/" target="_blank">Nitish Srivastava</a></p>
 </footer>
 
 </body>
